--- a/views/index.pug
+++ b/views/index.pug
@@ -3,11 +3,11 @@ extends layout
 block content
   h1 Palindrome Checker
   form(method="POST" action="/")
-    label(for="userText") Enter your text here:
+    label(for="userText") Enter Your Text Here:
     br
     input(type="text" id="userText" name="userText" value=`${phrase}`)
     br
     br
     button(type="submit") Submit
-if message
-  p=message
+  if message
+    p=message
