--- a/views/index.pug
+++ b/views/index.pug
@@ -9,5 +9,8 @@ block content
     br
     br
     button(type="submit") Submit
+    h2 KAYAK is a palindrome because you can spell it the same forwards as it backwards, k a y a k.
+    h2 RACECAR is a palindrome because you can spell it the same forwards as it backwards, r a c e c a r.
+    h2 NOON is a palindrome because you can spell it the same forwards as it backwards, n o o n.
   if message
     p=message
